tests/paczka1/fuzzy1/10069298.err
Error in line 5: IoEjrX94U A585 48,2
Error in line 15: IoEjrX94U A50 55,0
Error in line 29: A49 A50 76,7
Error in line 33: 15GlREXVHJ A729 6,8
